add dependencies to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ author-email = "thomas@kluyver.me.uk"
 home-page = "https://github.com/takluyver/jupyter_ssh_kernels"
 description-file = "README.rst"
 classifiers = ["License :: OSI Approved :: MIT License"]
+requires = ["pytoml", "paramiko"]
 
 [tool.flit.entrypoints."jupyter_kernel_mgmt.kernel_type_providers"]
 simple-ssh = "jupyter_ssh_kernels:SSHKernelProvider"
